--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -1,1 +1,17 @@
-{"packageDirectories":[{"path":"force-app","versionName":"","versionNumber":"","dependencies":[],"default":true,"package":""}],"namespace":"","sfdcLoginUrl":"https://login.salesforce.com","sourceApiVersion":"53.0","packageAliases":{}}
+{
+  "packageDirectories": [
+    {
+      "path": "force-app",
+      "versionName": "",
+      "versionNumber": "",
+      "dependencies": [],
+      "default": true,
+      "package": ""
+    }
+  ],
+  "name": "SalesforceFuncitonsRepo",
+  "namespace": "",
+  "sfdcLoginUrl": "https://login.salesforce.com",
+  "sourceApiVersion": "53.0",
+  "packageAliases": {}
+}
