--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -9,7 +9,7 @@
       "package": ""
     }
   ],
-  "name": "SalesforceFuncitonsRepo",
+  "name": "SalesforceFunctions",
   "namespace": "",
   "sfdcLoginUrl": "https://login.salesforce.com",
   "sourceApiVersion": "53.0",
